fix: update margin values to adjust the gap exlm-1053 (#469)

--- a/blocks/featured-cards/featured-cards.css
+++ b/blocks/featured-cards/featured-cards.css
@@ -139,7 +139,7 @@
   }
 
   .featured-cards .browse-cards-block-view {
-      margin-top: -72px;
+      margin-top: -68px;
       text-align: right;
   }
 
